--- a/package.json
+++ b/package.json
@@ -51,20 +51,21 @@
         ]
     },
     "devDependencies": {
+        "@d-fischer/isomorphic-ws": "^5.0.3",
         "@types/jest": "^24.0.18",
         "@types/ws": "^6.0.3",
         "husky": "^3.0.5",
         "isomorphic-ws": "^4.0.1",
-        "jest": "^24.9.0",
+        "jest": "^26.6.3",
         "lint-staged": "^9.2.5",
         "markdown-toc": "^1.2.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^1.18.2",
-        "ts-jest": "^24.0.2",
+        "ts-jest": "^26.5.2",
         "tslint": "^5.19.0",
         "tslint-config-prettier": "^1.18.0",
-        "typescript": "^3.6.2",
-        "ws": "^7.1.2"
+        "typescript": "^3.8.3",
+        "ws": "^7.4.0"
     },
     "dependencies": {}
 }
