--- a/.github/workflows/typescript-ci.yml
+++ b/.github/workflows/typescript-ci.yml
@@ -20,7 +20,7 @@ jobs:
             - name: Install dependencies
               run: yarn install --ignore-engines --verbose
             - name: Build
-              run: yarn run build && yarn run buildSol
+              run: yarn run build
             - name: Run tests
               run: yarn test:jest
               env:
