--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,15 @@
+
 {
-    "tabWidth": 4,
-    "trailingComma": "all"
+  "arrowParens": "always",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "jsxSingleQuote": false,
+  "printWidth": 100,
+  "proseWrap": "always",
+  "quoteProps": "as-needed",
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "useTabs": false
 }
